# Doubt_Resolution_System

./: .gitignore  README.md
backend/: .env.example  .vercelignore  pyproject.toml  requirements.txt
backend/api/: index.py
backend/app/: config.py  database.py  logger.py  main.py  models.py  schemas.py
backend/app/agents/: base_agent.py  example_agent.py  explanation_agent.py  intent_agent.py  simplification_agent.py  validation_agent.py
backend/app/utils/: diff_engine.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: AgentCard.tsx  DiffViewer.tsx
