[project]
name = "doubt-resolution-backend"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.0",
    "openai>=1.12.0",
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.0",
]

[tool.vercel]
entrypoint = "api.index:app"
